--- a/index.html
+++ b/index.html
@@ -6,24 +6,79 @@
     <title>GBT</title>
     <link rel="stylesheet" href="public/style.css" />
     <!-- Fix for iOS Safari zooming bug -->
-    <meta name="viewport" content="width=device-width,initial-scale=1.0,maximum-scale=1.0,minimum-scale=1.0, user-scalable=no" />
+    <meta name="viewport"
+        content="width=device-width,initial-scale=1.0,maximum-scale=1.0,minimum-scale=1.0, user-scalable=no" />
     <meta http-equiv="X-UA-Compatible" content="IE=Edge" />
     <link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css" />
 </head>
 
 <body>
-    <header>HEADER
+    <header>
+        <div class="header-panel">
+            <div class="container">
+                <a href="#"><img src="img/logo.png" alt=""></a>
+                <nav>
+                    <ul>
+                        <li><a href="" class="active">Главная</a></li>
+                        <li><a href="about.html">О компании</a></li>
+                        <li><a href="distribution.html">Дистрибуция</a></li>
+                        <li><a href="products.html">Продукция</a></li>
+                        <li><a href="career.html">Карьера</a></li>
+                        <li><a href="contacts.html">Контакты</a></li>
+                    </ul>
+                </nav>
+                <div class="language">
+                    <div class="language__active">RU</div>
+                </div>
+            </div>
+        </div>
     </header>
-    <main>
-        <section>
-        </section>
+
+    <main class="home-page">
+        <div class="header-image"></div>
+        <div class="header-description">
+            <div class="container">
+                <div class="header-description__subtitle">«GBT» - Power of Evolution</div>
+                <div class="header-description__title">ДИСТРИБЬЮЦИЯ
+                    <span> АЛКОГОЛЬНЫХ НАПИТКОВ</span>
+                </div>
+                <div class="header-description__text">Идейные соображения высшего порядка, а также укрепление и развитие
+                    структуры позволяет оценить
+                    значение
+                    форм развития. </div>
+                <button class="btn btn-header"><span>Подробнее</span></button>
+            </div>
+        </div>
+
+        <div class="slick-slider">
+            <div class="slider">
+                <div class="slick__item">1</div>
+                <div class="slick__item">1</div>
+                <div class="slick__item">1</div>
+                <div class="slick__item">1</div>
+                <div class="slick__item">1</div>
+            </div>
+            <div class="slick-controls-wrapper">
+                <button class="slick-prev slick-arrow"></button>
+                <button class="slick-next slick-arrow"></button>
+            </div>
+        </div>
+
+        <div class="socials">
+            <a href="" class="socials__item"></a>
+            <a href="" class="socials__item"></a>
+        </div>
     </main>
     <footer>
         <div class="container">
+            <div class="copyright">Все права защищены 2018. Копирование, тиражирование, перепечатка, а равно размещение
+                в интернете материалов сайта возможно только с письменного разрешения!</div>
+            <div class="copyright">2019 © GBT</div>
         </div>
     </footer>
-    <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
-    <!-- <script type="text/javascript" src="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script> -->
+    <script src="https://code.jquery.com/jquery-3.3.1.min.js"
+        integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
+    <script type="text/javascript" src="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
     <!-- <script src="https://cdn.jsdelivr.net/npm/vue@2.6.4/dist/vue.min.js"></script> -->
     <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.mask/1.14.15/jquery.mask.min.js"></script> -->
     <script src="public/app.js"></script>
