--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
     </header>
 
     <main class="home-page">
+
         <div class="header-image"></div>
         <div class="header-description">
             <div class="container">
@@ -50,18 +51,21 @@
             </div>
         </div>
 
+
+
         <div class="slick-slider">
             <div class="slider">
-                <div class="slick__item">1</div>
-                <div class="slick__item">1</div>
-                <div class="slick__item">1</div>
-                <div class="slick__item">1</div>
-                <div class="slick__item">1</div>
+                <div class="slick__item"></div>
+                <div class="slick__item"></div>
+                <div class="slick__item"></div>
+                <div class="slick__item"></div>
+                <div class="slick__item"></div>
+                <div class="slick__item"></div>
             </div>
-            <div class="slick-controls-wrapper">
+            <!-- <div class="slick-controls-wrapper">
                 <button class="slick-prev slick-arrow"></button>
                 <button class="slick-next slick-arrow"></button>
-            </div>
+            </div> -->
         </div>
 
         <div class="socials">
