--- a/index.html
+++ b/index.html
@@ -16,15 +16,15 @@
     <header>
         <div class="header-panel">
             <div class="container">
-                <a href="#"><img src="img/logo.png" alt=""></a>
+                <a href="#" class="logo"><img src="img/logo.svg" alt=""></a>
                 <nav>
                     <ul>
-                        <li><a href="" class="active">Главная</a></li>
-                        <li><a href="about.html">О компании</a></li>
-                        <li><a href="distribution.html">Дистрибуция</a></li>
-                        <li><a href="products.html">Продукция</a></li>
-                        <li><a href="career.html">Карьера</a></li>
-                        <li><a href="contacts.html">Контакты</a></li>
+                        <li><a href="index.html" class="active"><span>Главная</span></a></li>
+                        <li><a href="about.html"><span>О компании</span></a></li>
+                        <li><a href="distribution.html"><span>Дистрибуция<span></span></a></li>
+                        <li><a href="products.html"><span>Продукция<span></span></a></li>
+                        <li><a href="career.html"><span>Карьера<span></span></a></li>
+                        <li><a href="contacts.html"><span>Контакты<span></span></a></li>
                     </ul>
                 </nav>
                 <div class="language">
@@ -32,6 +32,7 @@
                 </div>
             </div>
         </div>
+        <div class="header-shadow"></div>
     </header>
 
     <main class="home-page">
@@ -39,7 +40,7 @@
         <div class="header-image"></div>
         <div class="header-description">
             <div class="container">
-                <div class="header-description__subtitle">«GBT» - Power of Evolution</div>
+                <div class="header-description__subtitle"><img src="img/" alt=""> «GBT» - Power of Evolution</div>
                 <div class="header-description__title">ДИСТРИБЬЮЦИЯ
                     <span> АЛКОГОЛЬНЫХ НАПИТКОВ</span>
                 </div>
@@ -51,21 +52,37 @@
             </div>
         </div>
 
-
-
-        <div class="slick-slider">
+        <div class="slick-slider-wrapper">
             <div class="slider">
-                <div class="slick__item"></div>
-                <div class="slick__item"></div>
-                <div class="slick__item"></div>
-                <div class="slick__item"></div>
-                <div class="slick__item"></div>
-                <div class="slick__item"></div>
+                <div class="slick__item">
+                    <img class="slick__item--img" src="img/slide-1.png" alt="">
+                    <div class="slick__item--text">Power of Evolution</div>
+                </div>
+                <div class="slick__item">
+                      <img class="slick__item--img" src="img/slide-2.png" alt="">
+                    <div class="slick__item--text">Power of Evolution</div>
+                </div>
+                <div class="slick__item">
+                      <img class="slick__item--img" src="img/slide-1.png" alt="">
+                    <div class="slick__item--text">Power of Evolution</div>
+                </div>
+                <div class="slick__item">
+                      <img class="slick__item--img" src="img/slide-2.png" alt="">
+                    <div class="slick__item--text">Power of Evolution</div>
+                </div>
+                <div class="slick__item">
+                      <img class="slick__item--img" src="img/slide-1.png" alt="">
+                    <div class="slick__item--text">Power of Evolution</div>
+                </div>
+                <div class="slick__item">
+                      <img class="slick__item--img" src="img/slide-2.png" alt="">
+                    <div class="slick__item--text">Power of Evolution</div>
+                </div>
+                <div class="slick__item">
+                      <img class="slick__item--img" src="img/slide-1.png" alt="">
+                    <div class="slick__item--text">Power of Evolution</div>
+                </div>
             </div>
-            <!-- <div class="slick-controls-wrapper">
-                <button class="slick-prev slick-arrow"></button>
-                <button class="slick-next slick-arrow"></button>
-            </div> -->
         </div>
 
         <div class="socials">
@@ -83,8 +100,6 @@
     <script src="https://code.jquery.com/jquery-3.3.1.min.js"
         integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
     <script type="text/javascript" src="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
-    <!-- <script src="https://cdn.jsdelivr.net/npm/vue@2.6.4/dist/vue.min.js"></script> -->
-    <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.mask/1.14.15/jquery.mask.min.js"></script> -->
     <script src="public/app.js"></script>
 </body>
 
