--- a/index.html
+++ b/index.html
@@ -16,7 +16,10 @@
     <header>
         <div class="header-panel">
             <div class="container">
-                <a href="#" class="logo"><img src="img/logo.svg" alt=""></a>
+                <div class="header-panel__left">
+                        <a href="#" class="logo"><img src="img/logo.svg" alt=""></a>
+                </div>
+              
                 <nav>
                     <ul>
                         <li><a href="index.html" class="active"><span>Главная</span></a></li>
@@ -40,7 +43,7 @@
         <div class="header-image"></div>
         <div class="header-description">
             <div class="container">
-                <div class="header-description__subtitle"><img src="img/" alt=""> «GBT» - Power of Evolution</div>
+                <div class="header-description__subtitle"><img src="img/leaf.png" alt=""> «GBT» - Power of Evolution</div>
                 <div class="header-description__title">ДИСТРИБЬЮЦИЯ
                     <span> АЛКОГОЛЬНЫХ НАПИТКОВ</span>
                 </div>
@@ -48,7 +51,7 @@
                     структуры позволяет оценить
                     значение
                     форм развития. </div>
-                <button class="btn btn-header"><span>Подробнее</span></button>
+                <button class="btn btn-header"><span>Подробнее</span><img src="img/left-arrow.svg" alt=""></button>
             </div>
         </div>
 
@@ -86,8 +89,8 @@
         </div>
 
         <div class="socials">
-            <a href="" class="socials__item"></a>
-            <a href="" class="socials__item"></a>
+            <a href="" class="socials__item"><img src="img/facebook.svg" alt=""></a>
+            <a href="" class="socials__item"><img src="img/instagram.svg" alt=""></a>
         </div>
     </main>
     <footer>
