--- a/404.html
+++ b/404.html
@@ -16,10 +16,13 @@
     <header>
         <div class="header-panel">
             <div class="container">
-                <a href="#" class="logo"><img src="img/logo.svg" alt=""></a>
+                <div class="header-panel__left">
+                    <a href="#" class="logo"><img src="img/logo.svg" alt=""></a>
+                </div>
+
                 <nav>
                     <ul>
-                        <li><a href="index.html" class="active"><span>Главная</span></a></li>
+                        <li><a href="index.html"><span>Главная</span></a></li>
                         <li><a href="about.html"><span>О компании</span></a></li>
                         <li><a href="distribution.html"><span>Дистрибуция<span></span></a></li>
                         <li><a href="products.html"><span>Продукция<span></span></a></li>
