--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
         <div class="header-panel">
             <div class="container">
                 <div class="header-panel__left">
-                        <a href="#" class="logo"><img src="img/logo.svg" alt=""></a>
+                    <a href="index.html" class="logo"><img src="img/logo.svg" alt=""></a>
                 </div>
-              
+
                 <nav>
                     <ul>
                         <li><a href="index.html" class="active"><span>Главная</span></a></li>
@@ -43,7 +43,8 @@
         <div class="header-image"></div>
         <div class="header-description">
             <div class="container">
-                <div class="header-description__subtitle"><img src="img/leaf.png" alt=""> «GBT» - Power of Evolution</div>
+                <div class="header-description__subtitle"><img src="img/leaf.png" alt=""> «GBT» - Power of Evolution
+                </div>
                 <div class="header-description__title">ДИСТРИБЬЮЦИЯ
                     <span> АЛКОГОЛЬНЫХ НАПИТКОВ</span>
                 </div>
@@ -51,38 +52,39 @@
                     структуры позволяет оценить
                     значение
                     форм развития. </div>
-                <button class="btn btn-header"><span>Подробнее</span><img src="img/left-arrow.svg" alt=""></button>
+                <button class="btn btn-header" data-modal="modal-1"><span>Подробнее</span><img src="img/left-arrow.svg"
+                        alt=""></button>
             </div>
         </div>
 
         <div class="slick-slider-wrapper">
             <div class="slider">
                 <div class="slick__item">
-                    <img class="slick__item--img" src="img/slide-1.png" alt="">
+                    <img class="slick__item--img" src="img/slide-1.jpg" alt="">
                     <div class="slick__item--text">Power of Evolution</div>
                 </div>
                 <div class="slick__item">
-                      <img class="slick__item--img" src="img/slide-2.png" alt="">
+                    <img class="slick__item--img" src="img/slide-2.jpg" alt="">
                     <div class="slick__item--text">Power of Evolution</div>
                 </div>
                 <div class="slick__item">
-                      <img class="slick__item--img" src="img/slide-1.png" alt="">
+                    <img class="slick__item--img" src="img/slide-1.jpg" alt="">
                     <div class="slick__item--text">Power of Evolution</div>
                 </div>
                 <div class="slick__item">
-                      <img class="slick__item--img" src="img/slide-2.png" alt="">
+                    <img class="slick__item--img" src="img/slide-2.jpg" alt="">
                     <div class="slick__item--text">Power of Evolution</div>
                 </div>
                 <div class="slick__item">
-                      <img class="slick__item--img" src="img/slide-1.png" alt="">
+                    <img class="slick__item--img" src="img/slide-1.jpg" alt="">
                     <div class="slick__item--text">Power of Evolution</div>
                 </div>
                 <div class="slick__item">
-                      <img class="slick__item--img" src="img/slide-2.png" alt="">
+                    <img class="slick__item--img" src="img/slide-2.jpg" alt="">
                     <div class="slick__item--text">Power of Evolution</div>
                 </div>
                 <div class="slick__item">
-                      <img class="slick__item--img" src="img/slide-1.png" alt="">
+                    <img class="slick__item--img" src="img/slide-1.jpg" alt="">
                     <div class="slick__item--text">Power of Evolution</div>
                 </div>
             </div>
