--- a/404.html
+++ b/404.html
@@ -17,7 +17,7 @@
         <div class="header-panel">
             <div class="container">
                 <div class="header-panel__left">
-                    <a href="#" class="logo"><img src="img/logo.svg" alt=""></a>
+                    <a href="index.html" class="logo"><img src="img/logo.svg" alt=""></a>
                 </div>
 
                 <nav>
