--- a/products.html
+++ b/products.html
@@ -6,44 +6,76 @@
     <title>GBT</title>
     <link rel="stylesheet" href="public/style.css" />
     <!-- Fix for iOS Safari zooming bug -->
-    <meta name="viewport" content="width=device-width,initial-scale=1.0,maximum-scale=1.0,minimum-scale=1.0, user-scalable=no" />
+    <meta name="viewport"
+        content="width=device-width,initial-scale=1.0,maximum-scale=1.0,minimum-scale=1.0, user-scalable=no" />
     <meta http-equiv="X-UA-Compatible" content="IE=Edge" />
     <link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css" />
 </head>
 
 <body>
-    <!-- <div> -->
     <header>
         <div class="header-panel">
-            <nav>
-                <ul>
-                    <li><a href="" class="active"><span>Главная</span></a></li>
-                    <li><a href=""><span>О компании</span></a></li>
-                    <li><a href=""><span>Дистрибуция</span></a></li>
-                    <li><a href=""><span>Продукция</span></a></li>
-                    <li><a href=""><span>Карьера</span></a></li>
-                    <li><a href=""><span>Контакты</span></a></li>
-                </ul>
-            </nav>
-            <div>
-                <div>RU</div>
+            <div class="container">
+                <div class="header-panel__left">
+                    <a href="index.html" class="logo"><img src="img/logo.svg" alt=""></a>
+                </div>
+
+                <nav>
+                    <ul>
+                        <li><a href="index.html"><span>Главная</span></a></li>
+                        <li><a href="about.html"><span>О компании</span></a></li>
+                        <li><a href="distribution.html"><span>Дистрибуция<span></span></a></li>
+                        <li><a href="products.html" class="active"><span>Продукция<span></span></a></li>
+                        <li><a href="career.html"><span>Карьера<span></span></a></li>
+                        <li><a href="contacts.html"><span>Контакты<span></span></a></li>
+                    </ul>
+                </nav>
+                <div class="language">
+                    <div class="language__active">RU</div>
+                </div>
             </div>
         </div>
+        <div class="header-shadow"></div>
     </header>
-    <!-- </div> -->
-    <main>
-        <section>
-        </section>
+
+    <main class="about-page">
+        <div class="container">
+
+        </div>
+
+        <div class="bottom-panel">
+            <div class="container">
+
+                <div class="bottom-panel__list">
+                    <a href="#" class="logo"><img src="img/logo.svg" alt=""></a>
+                    <ul>
+                        <li><a href="index.html" class="active"><span>Главная</span></a></li>
+                        <li><a href="about.html"><span>О компании</span></a></li>
+                        <li><a href="distribution.html"><span>Дистрибуция<span></span></a></li>
+                    </ul>
+                    <div class="line"></div>
+                    <ul>
+                        <li><a href="products.html"><span>Продукция<span></span></a></li>
+                        <li><a href="career.html"><span>Карьера<span></span></a></li>
+                        <li><a href="contacts.html"><span>Контакты<span></span></a></li>
+                    </ul>
+                </div>
+                <form class="form">
+                    <div class="form-title">Хотите быть в курсе новостей?</div>
+                    <input type="text" placeholder="Введите ваш Email">
+                    <button class="btn btn-subscribe">Подписаться</button>
+                </form>
+            </div>
+        </div>
     </main>
+
     <footer>
         <div class="container">
+            <div class="copyright">Все права защищены 2018. Копирование, тиражирование, перепечатка, а равно размещение
+                в интернете материалов сайта возможно только с письменного разрешения!</div>
+            <div class="copyright">2019 © GBT</div>
         </div>
     </footer>
-    <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
-    <!-- <script type="text/javascript" src="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script> -->
-    <!-- <script src="https://cdn.jsdelivr.net/npm/vue@2.6.4/dist/vue.min.js"></script> -->
-    <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.mask/1.14.15/jquery.mask.min.js"></script> -->
-    <script src="public/app.js"></script>
 </body>
 
 </html>
