--- a/about.html
+++ b/about.html
@@ -10,6 +10,7 @@
         content="width=device-width,initial-scale=1.0,maximum-scale=1.0,minimum-scale=1.0, user-scalable=no" />
     <meta http-equiv="X-UA-Compatible" content="IE=Edge" />
     <link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css" />
+    <link href="https://fonts.googleapis.com/css?family=PT+Sans" rel="stylesheet">
 </head>
 
 <body>
@@ -24,10 +25,10 @@
                     <ul>
                         <li><a href="index.html"><span>Главная</span></a></li>
                         <li><a href="about.html" class="active"><span>О компании</span></a></li>
-                        <li><a href="distribution.html"><span>Дистрибуция<span></span></a></li>
-                        <li><a href="products.html"><span>Продукция<span></span></a></li>
-                        <li><a href="career.html"><span>Карьера<span></span></a></li>
-                        <li><a href="contacts.html"><span>Контакты<span></span></a></li>
+                        <li><a href="distribution.html"><span>Дистрибуция</span></a></li>
+                        <li><a href="products.html"><span>Продукция</span></a></li>
+                        <li><a href="career.html"><span>Карьера</span></a></li>
+                        <li><a href="contacts.html"><span>Контакты</span></a></li>
                     </ul>
                 </nav>
                 <div class="language">
@@ -39,8 +40,127 @@
     </header>
 
     <main class="about-page">
+        <div class="top-panel">
+            <div class="container">
+                <div class="breadcrumbs">
+                    <a class="breadcrumbs__item" href="index.html"><span>Главная</span></a>
+                    <span class="breadcrumbs__item">О компании</span>
+                </div>
+                <div class="top-panel__title">О компании
+                    <!-- <img src="img/hand-shake.png" alt="">     -->
+                </div>
+                <div class="top-panel__descr">С другой стороны рамки и место обучения кадров влечет за собой процесс
+                    внедрения и модернизации позиций, занимаемых участниками в отношении поставленных задач. Задача
+                    организации, в особенности же укрепление и развитие структуры обеспечивает широкому кругу
+                    (специалистов) участие в формировании новых предложений.</div>
+            </div>
+        </div>
+
         <div class="container">
-  
+            <div class="title title-about">О нас</div>
+            <div class="about-list">
+                <div class="about-list__item">
+                    <div class="about-list__item--image"></div>
+                    <div class="about-list__item--title"> GLOBAL BEVERAGE TRADE</div>
+                    <div class="about-list__item--text"> основана в 1996 году, динамично развивающаяся дистрибьюционная
+                        кампания как собтсвенных торговых
+                        марок,
+                        так и импортных. GBT – это компания выдающихся людей, которые испытывают СТРАСТЬ к своему делу,
+                        требовательны к себе и окружающим, открыты к новому и доверяют друг другу как себе. Сердне
+                        годовой
+                        оборот кампании составляет более 10 МЛН бутылок. Собственные логистические центры общей площадью
+                        более
+                        11 тыс м.кв.</div>
+                </div>
+                <div class="about-list__item">
+                    <div class="about-list__item--title"> НАШИ ПРОДУКТЫ</div>
+                    <div class="about-list__item--text">основана в 1996 году, динамично развивающаяся дистрибьюционная
+                        кампания как собтсвенных торговых
+                        марок,
+                        так и импортных. GBT – это компания выдающихся людей, которые испытывают СТРАСТЬ к своему делу,
+                        требовательны к себе и окружающим, открыты к новому и доверяют друг другу как себе. Сердне
+                        годовой
+                        оборот кампании составляет более 10 МЛН бутылок. Собственные логистические центры общей площадью
+                        более
+                        11 тыс м.кв.</div>
+                    <div class="about-list__item--image"><img src="img/wine.svg" alt=""></div>
+                </div>
+                <div class="about-list__item">
+                    <div class="about-list__item--image"></div>
+                    <div class="about-list__item--title"> ПАРТНЕРЫ</div>
+                    <div class="about-list__item--text">Нашими партнёрами являются 80 ведущих дистрибьюторов и 16
+                        национальных сетевых магазинов по всей
+                        территории Украины.
+                        Общее количество торговых точек более 35 000. Экспортное направление активно работает с Англией,
+                        Шотландией, Польшей, Латвией, Литвой, Словакией, Китаем, Нигерией и другими странами.</div>
+                </div>
+            </div>
+        </div>
+        <div class="mission">
+            <div class="container">
+                <div class="mission__title">Миссия</div>
+                <div class="mission__text">
+                    <p> Наша АМБИЦИОЗНАЯ ЦЕЛЬ - создавать не просто продукты, а  настоящие  БРЕНДЫ, которые принесут
+                        ценность людям в любой точке земного шара!</p>
+                    <p> GBT – это компания выдающихся людей, которые испытывают СТРАСТЬ к своему делу, требовательны к
+                        себе
+                        и окружающим, открыты к новому и доверяют друг другу как себе.</p>
+                </div>
+            </div>
+        </div>
+        <div class="visia">
+            <div class="container">
+                <div class="title title-visia">Визия</div>
+                <div class="visia__image">
+                    <img src="img/shutterstock.png" alt="">
+                </div>
+                <div class="visia__text">
+                    Мы видим нашу задачу в создании востребованных алкогольных БРЕНДОВ для мирового рынка, которые 
+                    благодаря своей иновационности и соответствию высоким стандартами качества станут ведущими в своей
+                    категории и будут доступны каждому.
+
+                    Мы слушаем и слышим  своего потребителя, погружаемся в детали и искренне хотим, чтобы наши бренды
+                    приносили ценность ЛЮДЯМ.
+                </div>
+            </div>
+        </div>
+
+        <div class="values">
+            <div class="container">
+                <div class="title title-values">Ценности</div>
+                <div class="values__list">
+                    <div class="values__list-item"></div>
+                    <div class="values__list-item">
+                        <div class="values__list-item--number">01</div>
+                        <div class="values__list-item--text">Проактивность</div>
+                    </div>
+                    <div class="values__list-item"></div>
+                    <div class="values__list-item">
+                        <div class="values__list-item--number">02</div>
+                        <div class="values__list-item--text">Динамичность</div>
+                    </div>
+                    <div class="values__list-item">
+                        <div class="values__list-item--number">03</div>
+                        <div class="values__list-item--text">Амбициозность</div>
+                    </div>
+                    <div class="values__list-item"></div>
+                    <div class="values__list-item">
+                        <div class="values__list-item--number">04</div>
+                        <div class="values__list-item--text">Системность</div>
+                    </div>
+                    <div class="values__list-item"></div>
+                    <div class="values__list-item"></div>
+                    <div class="values__list-item">
+                        <div class="values__list-item--number">05</div>
+                        <div class="values__list-item--text">Дружба</div>
+                    </div>
+                    <div class="values__list-item"></div>
+                    <div class="values__list-item">
+                        <div class="values__list-item--number">06</div>
+                        <div class="values__list-item--text">Открытость</div>
+                    </div>
+                </div>
+            </div>
         </div>
 
         <div class="bottom-panel">
