--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
                     </div>
                     <label class="checkbox">
                         <input type="checkbox" name="save" value="true">
-                        <div class="checkbox__icon"></div>
+                        <span class="checkbox__icon"></span>
                         Запомнить меня
                     </label>
                 </div>
@@ -132,7 +132,7 @@
     <script src="https://code.jquery.com/jquery-3.3.1.min.js"
         integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
     <script type="text/javascript" src="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
-    <script src="public/app.js"></script>
+    <script type="text/javascript" src="public/app.js"></script>
 </body>
 
 </html>
