--- a/products.html
+++ b/products.html
@@ -24,10 +24,10 @@
                     <ul>
                         <li><a href="index.html"><span>Главная</span></a></li>
                         <li><a href="about.html"><span>О компании</span></a></li>
-                        <li><a href="distribution.html"><span>Дистрибуция<span></span></a></li>
-                        <li><a href="products.html" class="active"><span>Продукция<span></span></a></li>
-                        <li><a href="career.html"><span>Карьера<span></span></a></li>
-                        <li><a href="contacts.html"><span>Контакты<span></span></a></li>
+                        <li><a href="distribution.html"><span>Дистрибуция</span></a></li>
+                        <li><a href="products.html" class="active"><span>Продукция</span></a></li>
+                        <li><a href="career.html"><span>Карьера</span></a></li>
+                        <li><a href="contacts.html"><span>Контакты</span></a></li>
                     </ul>
                 </nav>
                 <div class="language">
