--- a/about.html
+++ b/about.html
@@ -112,15 +112,23 @@
             <div class="container">
                 <div class="title title-visia">Визия</div>
                 <div class="visia__image">
-                    <img src="img/shutterstock.png" alt="">
+                    <img src="img/shutterstock.jpg" alt="">
                 </div>
                 <div class="visia__text">
-                    Мы видим нашу задачу в создании востребованных алкогольных БРЕНДОВ для мирового рынка, которые 
-                    благодаря своей иновационности и соответствию высоким стандартами качества станут ведущими в своей
-                    категории и будут доступны каждому.
+                    <p>
+                        Мы видим нашу задачу в создании востребованных алкогольных БРЕНДОВ для мирового рынка, которые 
+                        благодаря своей иновационности и соответствию высоким стандартами качества станут ведущими в
+                        своей
+                        категории и будут доступны каждому.
 
-                    Мы слушаем и слышим  своего потребителя, погружаемся в детали и искренне хотим, чтобы наши бренды
-                    приносили ценность ЛЮДЯМ.
+                    </p>
+                    <p>
+                        Мы слушаем и слышим  своего потребителя, погружаемся в детали и искренне хотим, чтобы наши
+                        бренды
+                        приносили ценность ЛЮДЯМ.
+                    </p>
+
+
                 </div>
             </div>
         </div>
