--- a/index.html
+++ b/index.html
@@ -121,7 +121,8 @@
                     </label>
                 </div>
                 <div class="modal-language">
-                    <label class="modal-language__item active"><input type="radio" name="lang" checked value="urk"> UKR</label>
+                    <label class="modal-language__item active"><input type="radio" name="lang" checked value="urk">
+                        UKR</label>
                     <label class="modal-language__item"><input type="radio" name="lang" value="eng">ENG</label>
                     <label class="modal-language__item"><input type="radio" name="lang" value="ru">RU</label>
                 </div>
@@ -131,8 +132,8 @@
 
     <script src="https://code.jquery.com/jquery-3.3.1.min.js"
         integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
-    <script type="text/javascript" src="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
-    <script type="text/javascript" src="public/app.js"></script>
+    <script src="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
+    <script src="public/app.js"></script>
 </body>
 
 </html>
