--- a/career.html
+++ b/career.html
@@ -51,13 +51,13 @@
                     <ul>
                         <li><a href="index.html" class="active"><span>Главная</span></a></li>
                         <li><a href="about.html"><span>О компании</span></a></li>
-                        <li><a href="distribution.html"><span>Дистрибуция<span></span></a></li>
+                        <li><a href="distribution.html"><span>Дистрибуция</span></a></li>
                     </ul>
                     <div class="line"></div>
                     <ul>
-                        <li><a href="products.html"><span>Продукция<span></span></a></li>
-                        <li><a href="career.html"><span>Карьера<span></span></a></li>
-                        <li><a href="contacts.html"><span>Контакты<span></span></a></li>
+                        <li><a href="products.html"><span>Продукция</span></a></li>
+                        <li><a href="career.html"><span>Карьера</span></a></li>
+                        <li><a href="contacts.html"><span>Контакты</span></a></li>
                     </ul>
                 </div>
                 <form class="form">
