--- a/distribution.html
+++ b/distribution.html
@@ -17,7 +17,7 @@
         <div class="header-panel">
             <div class="container">
                 <div class="header-panel__left">
-                    <a href="index.html" class="logo"><img src="img/logo.svg" alt=""></a>
+                    <a href="index.html" class="logo"><img src="img/main-logo.svg" alt=""></a>
                 </div>
 
                 <nav>
@@ -47,7 +47,7 @@
             <div class="container">
 
                 <div class="bottom-panel__list">
-                    <a href="#" class="logo"><img src="img/logo.svg" alt=""></a>
+                    <a href="#" class="logo"><img src="img/main-logo.svg" alt=""></a>
                     <ul>
                         <li><a href="index.html" class="active"><span>Главная</span></a></li>
                         <li><a href="about.html"><span>О компании</span></a></li>
