--- a/distribution.html
+++ b/distribution.html
@@ -38,9 +38,16 @@
         <div class="header-shadow"></div>
     </header>
 
-    <main class="about-page">
-        <div class="container">
-
+    <main class="distribution-page">
+        <div class="top-panel">
+            <div class="container">
+                <div class="top-panel__title">Дистрибуция
+                </div>
+                <div class="top-panel__descr">С другой стороны рамки и место обучения кадров влечет за собой процесс
+                    внедрения и модернизации позиций, занимаемых участниками в отношении поставленных задач. Задача
+                    организации, в особенности же укрепление и развитие структуры обеспечивает широкому кругу
+                    (специалистов) участие в формировании новых предложений.</div>
+            </div>
         </div>
 
         <div class="bottom-panel">
